[package]
name = "rustls-native-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
rustls = "0.20.0"
rustls-native-certs = { version = "0.5.0", features = ["rustls"] }
webpki = "0.22.0"
x509-parser = "0.12.0"